--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ngxs/store": "^3.7.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "xp.css": "^0.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
